--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -6,6 +6,7 @@ web_server_user: www-data
 
 local_tls: false
 caddy_conf_autosave_dir: /var/www
+caddy_binary_location: /usr/bin/caddy
 
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
 # Check /etc/php/7.3/fpm/pool.d/www.conf for location of unix socket
