sloppy change storage location
Info about what I was trying to fix with this commit: https://caddy.community/t/v2-cant-use-local-ca-certs-storage-misconfigured/7986/

This embarassing commit resulted in two working web servers after I messed with the server manually, but I'm not confident this code did what it was supposed to. E.g. I thought I copied the old storage to the new location, but Caddy still seemed to fetch new certs anyway according to the logs.

I'm also not sure "caddy trust" does what I think it does, since I thought it would get rid of the "http : user NOT in sudoers" error, and it doesn't seem to have done so.

Since the new storage location is the default, which is based on the web server user's home directory, I changed the autosave and storage dirs to include home dir variables.

--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -14,21 +14,45 @@
     - daemon-reload service caddy
     - restart caddy
   tags: caddy_service
+
+- name: save info about web server user (including home dir)
+  user:
+    name: '{{ web_server_user }}'
+  register: webserver_user_registered
+  tags: webserver_user_registered
+- name: print home dir for web server user
+  debug:
+    var: webserver_user_registered.home
+    # verbosity: 1
+  tags: webserver_user_registered
     
-- name: create /etc/caddy directory
-  file:
-    path: /etc/caddy
-    state: directory
-    owner: '{{ web_server_user }}'
-    group: '{{ web_server_user }}'
-    mode: '0755'
+# Info on data directory location defaults (which we override with our Caddyfile):
+# https://caddyserver.com/docs/conventions#data-directory
+# - name: create data directory # it's not just tls certificates
+#   file:
+#     path: /etc/caddy/storage
+#     state: directory
+#     owner: '{{ web_server_user }}'
+#     group: '{{ web_server_user }}'
+#     mode: '0755'
+
+# Info on data directory location defaults:
+# https://caddyserver.com/docs/conventions#data-directory
 - name: create data directory # it's not just tls certificates
   file:
-    path: /etc/caddy/storage
+    path: '{{ caddy_storage_dir }}'
     state: directory
     owner: '{{ web_server_user }}'
     group: '{{ web_server_user }}'
     mode: '0755'
+
+# - name: copy contents of old data directory to new data dir
+#   synchronize:
+#     src: /etc/caddy/storage
+#     dest: '{{ caddy_storage_dir }}'
+#   delegate_to: '{{ inventory_hostname }}'
+
+# defaults: https://caddyserver.com/docs/conventions#configuration-directory
 - name: create folder for config autosave
   file:
     path: '{{ caddy_conf_autosave_dir }}'
@@ -177,6 +201,12 @@
     owner: '{{ web_server_user }}'
     group: '{{ web_server_user }}'
     mode: u=rwx,g=rx,o=rx
+
+# - name: install Caddy local CA cert
+#   command: '{{ caddy_binary_location }} trust'
+#   tags: caddy_trust
+#   notify:
+#     - restart caddy
 
 - name: start and enable caddy service
   service:
