--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -5,7 +5,8 @@ sudoing_group: sudo
 web_server_user: www-data
 
 local_tls: false
-caddy_conf_autosave_dir: /var/www
+# caddy_storage_dir: 
+# caddy_conf_autosave_dir: /var/www/.config/caddy
 caddy_binary_location: /usr/bin/caddy
 
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
