add distribution version

--- a/facts.yml
+++ b/facts.yml
@@ -6,4 +6,7 @@
   tasks:
     - name: print OS info
       debug: 
-        msg: This server is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
+        msg: >-
+          This server is running the {{ ansible_distribution }} distribution,
+          version {{ ansible_distribution_version }},
+          in the {{ ansible_os_family }} OS family.
