--- a/roles/sunrise/vars/linode.yml
+++ b/roles/sunrise/vars/linode.yml
@@ -1,5 +1,5 @@
 # API documentation: https://developers.linode.com/api/v4/
-linode_label: brockovich
+linode_label: greta
 linode_type: g6-nanode-1 # https://api.linode.com/v4/linode/types
 linode_region: us-east # https://api.linode.com/v4/regions
 linode_image: linode/arch # https://api.linode.com/v4/images
@@ -12,4 +12,4 @@ linode_token: "{{ sunrise_linode_token }}"
 # password: "{{ pass_attenborough }}"
 
 # put local_hostname in /usr/local/etc/ansible/host_vars/[servername]
-inventory_directory: /usr/local/etc/ansible/
+inventory_directory: /etc/ansible
