--- a/roles/linode-create/main.yml
+++ b/roles/linode-create/main.yml
@@ -1,5 +1,5 @@
 # API documentation: https://developers.linode.com/api/v4/
-linode_label: greta
+linode_label: america
 linode_type: g6-nanode-1 # https://api.linode.com/v4/linode/types
 linode_region: us-east # https://api.linode.com/v4/regions
 linode_image: linode/arch # https://api.linode.com/v4/images
@@ -8,7 +8,7 @@ linode_image: linode/arch # https://api.linode.com/v4/images
 # Give read/write access to at least Linodes, if not everything else
 # Put PAT in ansible hosts file e.g. /usr/local/etc/ansible/hosts
 # under [local:vars] after defining [local] as localhost
-linode_token: "{{ sunrise_linode_token }}"
+linode_token: "{{ linode_api_key }}"
 # password: "{{ pass_attenborough }}"
 
 # put local_hostname in /usr/local/etc/ansible/host_vars/[servername]
