replace "webservers" group with "all" when appropriate
Why not fetch facts about literally every host in our inventory? Why not update the software on every host? I initially created the webservers group as a way to exclude localhost, but it turns out you can achieve the same effect with "all" simply by not including localhost in your inventory. Or, you can include localhost by adding it to your inventory with "ansible_connection: local".

Strangely Pop OS doesn't identify itself as being in the Debian OS family, despite being based on Ubuntu which *is* in the Debian OS family. WTF.

--- a/update_upgrade.yml
+++ b/update_upgrade.yml
@@ -1,4 +1,4 @@
-- hosts: webservers
+- hosts: all
   become: yes
   tasks:
   - name: update apt sources (if we haven't lately) + upgrade packages
@@ -6,7 +6,7 @@
       update_cache: yes
       cache_valid_time: 3600
       upgrade: safe
-    when: ansible_os_family == 'Debian'
+    when: ansible_os_family == 'Debian' or ansible_os_family == 'Pop!_OS'
 
   - name: Run the equivalent of "pacman -Syu", updating sources and packages
     pacman:
