fixed linode_destroy, switch to Ubuntu
linode_destroy works now, but we have to get rid of the stupid practice of importing variables from a separate role.

I think we should use Ubuntu on the stable server and perhaps Arch on a testing server? Sadly the Caddy package on Arch is still not up to date.

--- a/linode_destroy.yml
+++ b/linode_destroy.yml
@@ -5,7 +5,7 @@
   tasks:
   - name: include variables
     include_vars:
-      file: roles/sunrise/vars/linode.yml
+      file: roles/new-linode_create/vars/main.yml
 
   - name: pip install linode_api4
     pip:
@@ -14,7 +14,7 @@
   - name: Ensure linode is missing (delete if present)
     linode_v4:
       label: "{{ linode_label }}"
-      access_token: "{{ linode_token }}"
+      access_token: "{{ maximum_ethics_linode_token }}"
       state: absent
 
   # - name: Remove hostname from ~/.ssh/known_hosts
