--- a/roles/new-linode_create/vars/main.yml
+++ b/roles/new-linode_create/vars/main.yml
@@ -3,14 +3,15 @@ hosts_group: maxethics
 linode_label: america
 linode_type: g6-nanode-1 # https://api.linode.com/v4/linode/types
 linode_region: us-east # https://api.linode.com/v4/regions
-linode_image: linode/arch # https://api.linode.com/v4/images
+# linode_image: linode/arch # https://api.linode.com/v4/images
+linode_image: linode/ubuntu20.04
 # create Personal Access Token by clicking your profile in the upper right
 # My Profile -> API Tokens -> [+] Add a Personal Access Token
 # Give read/write access to at least Linodes, if not everything else
 # Put PAT in ansible hosts file e.g. /usr/local/etc/ansible/hosts
 # under [local:vars] after defining [local] as localhost
 linode_token: "{{ maximum_ethics_linode_token }}"
-# password: "{{ pass_attenborough }}"
 
 # put local_hostname in /usr/local/etc/ansible/host_vars/[servername]
-# inventory_directory: /usr/local/etc/ansible
+# put inventory_directory in host_vars/localhost/vars.yml
+# inventory_directory: /etc/ansible
