--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -10,7 +10,7 @@ web_server_user: http
 
 local_tls: true
 # caddy_conf_autosave_dir: /srv/http/.config/caddy
-caddy_archive_url: https://github.com/caddyserver/caddy/releases/download/v2.1.1/caddy_2.1.1_linux_arm64.tar.gz
+caddy_archive_url: https://github.com/caddyserver/caddy/releases/download/v2.2.0/caddy_2.2.0_linux_amd64.tar.gz
 caddy_binary_location: /usr/local/bin/caddy
 
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
