--- a/roles/new-linode_create/vars/main.yml
+++ b/roles/new-linode_create/vars/main.yml
@@ -4,7 +4,7 @@ linode_label: america
 linode_type: g6-nanode-1 # https://api.linode.com/v4/linode/types
 linode_region: us-east # https://api.linode.com/v4/regions
 # linode_image: linode/arch # https://api.linode.com/v4/images
-linode_image: linode/ubuntu20.04
+linode_image: linode/arch
 # create Personal Access Token by clicking your profile in the upper right
 # My Profile -> API Tokens -> [+] Add a Personal Access Token
 # Give read/write access to at least Linodes, if not everything else
