--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -1,3 +1,7 @@
+# first, if you want to use Arch Linux, run locally:
+# ansible-galaxy install kewlfft.aur
+# https://github.com/kewlfft/ansible-aur
+
 - name: Include OS-specific variables
   include_vars: "{{ ansible_distribution }}.yml"
   tags: always
@@ -22,6 +26,15 @@
   tags: updategrade
   when: ansible_os_family == 'Archlinux'
 
+- name: upgrade AUR packages
+  aur:
+    upgrade: yes
+    aur_only: yes
+  tags: updategrade
+  when: 
+    - ansible_os_family == 'Archlinux'
+    - aur_packages is defined  
+
 # TODO: Also update packages installed from other sources, such as pip
 # linode_create.yml installs linode-api4 from pip
 
@@ -36,6 +49,37 @@
   loop: "{{ os_packages }}"
   tags: initial_packages
   when: os_packages is defined
+
+- user:
+    name: aur_builder
+  tags: aur_builder
+  when: 
+    - ansible_os_family == 'Archlinux'
+    - aur_packages is defined 
+- lineinfile:
+    path: /etc/sudoers.d/11-install-aur_builder
+    line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
+    create: yes
+    validate: 'visudo -cf %s'
+  tags: aur_builder
+  when: 
+    - ansible_os_family == 'Archlinux'
+    - aur_packages is defined
+
+# first, log into the server and run:
+# sudo -u aur_builder gpg --keyserver pool.sks-keyservers.net --receive-keys 29D0817A67156E4F25DC24782A349DD577D586A5
+# Otherwise Caddy2 package won't work:
+# https://aur.archlinux.org/packages/caddy2/
+- name: install AUR packages
+  aur:
+    name: '{{ item }}'
+  loop: '{{ aur_packages }}'
+  become: yes
+  become_user: aur_builder
+  tags: aur_packages
+  when: 
+    - ansible_os_family == 'Archlinux'
+    - aur_packages is defined
 
 - name: Add limited user accounts for all Sunrise sysadmins
   user:
