--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -147,10 +147,10 @@
   debug:
     msg: This server is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
     verbosity: 1
-  tags: caddy_v2
+  tags: caddy
 - name: setup Caddy V2 web server
   import_tasks: caddy.yml
-  tags: caddy_v2
+  tags: caddy
 
 - name: set up some handcoded websites
   import_tasks: new_handcoded.yml
