fix handcoded sites, Sunrise PVD works now
We'll need to figure out a payment plan etc. for Sunrise PVD and get
their blessing before we can move their site to the new server. AFAIK
their site works perfectly, tests well with local TLS, but I guess I won't
know for sure until we try it with Let's Encrypt.

--- a/roles/sunrise/vars/local_tls.yml
+++ b/roles/sunrise/vars/local_tls.yml
@@ -2,11 +2,6 @@
 caddyfile_name: LocalCaddyfile.j2
 
 handcoded_websites:
-  - subdomain: ri
-    domain_name: sunrisemovement.dev
-    git_repo: https://github.com/michaelkearney55/ri.sunrisemovement.org.git
-  - subdomain: sfbay
-    domain_name: sunrisemovement.org
-    git_repo: https://github.com/sunrise-bay-area/sunrise-bay-area.git
-    version: gh-pages
-    depth: 3
+  - subdomain: www
+    domain_name: sunrisepvd.com
+    git_repo: https://github.com/sunriseprovidence/sunrisepvd.com.git
