--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -4,7 +4,7 @@ os_packages:
 sudoing_group: sudo
 web_server_user: www-data
 
-local_tls: false
+local_tls: true
 # caddy_storage_dir: 
 # caddy_conf_autosave_dir: /var/www/.config/caddy
 caddy_binary_location: /usr/bin/caddy
