--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -35,9 +35,9 @@ building_caddy: false
 caddyfile_name: Caddyfile.j2
 
 handcoded_websites:
-  - subdomain: ri
-    domain_name: sunrisemovement.dev
-    git_repo: https://github.com/michaelkearney55/ri.sunrisemovement.org.git
+  - subdomain: www
+    domain_name: sunrisepvd.com
+    git_repo: https://github.com/sunriseprovidence/sunrisepvd.com.git
 
 hugo_deb_url: https://github.com/gohugoio/hugo/releases/download/v0.75.1/hugo_0.75.1_Linux-64bit.deb
 hugo_sites:
