--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -1,6 +1,7 @@
 os_packages:
   - base-devel # needed for AUR
   - exa # ls alternative
+  - fd # find alternative
   - which # to find where executables are installed
   - rsync # dependency for "synchronize" Ansible module
   - go # needed to build Caddy from source
