switch to caddy-bin, eliminate favicon requests
We're switching from the caddy2 AUR package to caddy-bin, because caddy2
had multiple issues related to GPG key signing and couldn't update:
https://aur.archlinux.org/packages/caddy2/
https://github.com/caddyserver/caddy/issues/3797

As a result I'm copying some of their caddy service file. I don't know
what all of these options do, it's a bit of cargo culting I guess.

Also, to prevent browsers from attempting to fetch a favicon that does
not exist, we're adding a blank favicon to the html of the test page:
https://stackoverflow.com/a/38917888/7921798

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -13,10 +13,18 @@
     state: started
     enabled: yes
 
-- name: daemon-reload service caddy
+- name: daemon-reload restart caddy
   systemd:
     name: caddy
     daemon_reload: yes
+    state: restarted
+  listen: daemon-reload restart caddy
+- name: let caddy bind to ports 80 and 443
+  capabilities:
+    path: '{{ caddy_binary_location }}'
+    capability: cap_net_bind_service=+ep
+    state: present
+  listen: daemon-reload restart caddy
 
 - name: reload caddy
   service:
@@ -30,7 +38,7 @@
   listen: restart caddy
 - name: let caddy bind to ports 80 and 443
   capabilities:
-    path: /usr/local/bin/caddy
+    path: '{{ caddy_binary_location }}'
     capability: cap_net_bind_service=+ep
     state: present
   listen: restart caddy
